# hak

./: .drone.yml  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  go.mod  h2-cfg.h.in  hak-inst.go  hak.go  lang.txt  main.go
go/: Makefile.am  Makefile.in  cb.go  go.mod  hak.go  hcl.go  inst.go  main.go
go/cfg/: cfg.go.in  go.mod.in
go/pkg/: cb.go  hcl.go  inst.go
include/h2/: config.h.in
lib/: Makefile.am  Makefile.in  bigint.c  chr.c  cmgr.c  cnode.c  comp.c  debug.c  decode.c  dic.c  err.c  exec.c  fmt-imp.h  fmt.c  gc.c  h2-ascii.ads  h2-pool.adb  h2-scheme.adb  h2-scheme.ads  h2.ads  hak-cfg.h.in  hak-chr.h  hak-cmgr.h  hak-cmn.h  hak-dos.h  hak-fmt.h  hak-json.h  hak-mac.h  hak-msw.h  hak-opt.h  hak-os2.h  hak-prv.h  hak-rbt.h  hak-str.h  hak-tmr.h  hak-utl.h  hak-x.h  hak-xma.h  hak.c  hak.h  (+63 more)
lib/cmn/: Makefile.in
lib2/: Makefile  h3-arrays.adb  h3-arrays.ads  h3-cc.adb  h3-cc.ads  h3-compilers.adb  h3-compilers.ads  h3-cords.ads  h3-io.ads  h3-limited_pool.adb  h3-limited_pool.ads  h3-mm.adb  h3-mm.ads  h3-pool.adb  h3-pool.ads  h3-runes.adb  h3-runes.ads  h3-storage.ads  h3-storage_pools.adb  h3-storage_pools.ads  h3-strings.adb  h3-strings.ads  h3-trees.adb  h3-trees.ads  h3-utf8.adb  h3-utf8.ads  h3-utf_32.adb  h3-utf_32.ads  h3.adb  h3.ads  hello.adb  hello2.adb  hello3.adb  rune.hawk  rune.txt  sample-lang.txt
mod/: Makefile.am  Makefile.in  _core.h  _dic.h  _sys.h  arr.c  core.c  dic.c  str.c  sys.c
pas/: Makefile.am  Makefile.in  hak.pas  hcl.pas  main.pas
src/: Collection.hak  Magnitude.hak  Magnitude.hcl  System.hcl  kernel.hak  kernel.hcl
t/: Makefile.am  Makefile.in  call-01.err  call-5001.err  class-01.err  class-5001.err  do-01.err  do-02.err  do-5001.err  err.sh  feed-01.err  feed-01.hak  feed-01.hcl  feed-02.err  feed-5001.err  feed-5003.err  feed-5004.err  feed-5005.err  feed-5006.err  feed-5007.err  feed-5008.err  feed-5009.err  fun-01.hak  fun-01.hcl  insta-01.hak  insta-01.hcl  insta-02.hak  insta-02.hcl  mlist-01.err  mlist-5001.err  prim-01.hak  proc-01.hcl  ret-01.hak  ret-01.hcl  retvar-01.hak  retvar-01.hcl  run.sh  t-001.c  test-bi.hak  test-bi.hcl  (+15 more)
